<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cpre388.jmay.homework4.RunActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/queue_size_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queue_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/worker_count_title"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_margin="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/worker_count_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/worker_count"
        app:layout_constraintTop_toBottomOf="@id/queue_size_title"
        app:layout_constraintBottom_toTopOf="@+id/complete_count_title"
        android:layout_margin="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/complete_count_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_count"
        app:layout_constraintTop_toBottomOf="@id/worker_count_title"
        app:layout_constraintBottom_toTopOf="@+id/button"
        android:layout_margin="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="stopClicked"
        android:text="@string/stop"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/queue_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="180"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/queue_size_title"
        android:layout_marginTop="0dp"/>

    <TextView
        android:id="@+id/worker_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="8/10"
        app:layout_constraintTop_toTopOf="@+id/worker_count_title"
        android:layout_marginTop="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/complete_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="12"
        app:layout_constraintTop_toTopOf="@+id/complete_count_title"
        android:layout_marginTop="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>
